unpackaged/main/default/objects/Case/fields/Pipelines_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Pipelines_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pipelines checkbox</label>
    <type>Checkbox</type>
</CustomField>