unpackaged/main/default/objects/Case/fields/Pipelines_test__c.field-meta.xml
<CustomField>
    <fullName>Pipelines_test__c</fullName>
    <label>Pipelines test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>