unpackaged/main/default/objects/Case/fields/Release_Case__c.field-meta.xml
<CustomField>
    <fullName>Release_Case__c</fullName>
    <label>Release Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>