unpackaged/main/default/objects/Case/fields/Test_Release__c.field-meta.xml
<CustomField>
    <fullName>Test_Release__c</fullName>
    <label>Test Release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>